--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body><div class="button-wrapper">
-    <button onclick="resetGrid()" type="button">Reset Grid</button>
+  <body>
+    <div class="button-wrapper">
+      <button onclick="resetGrid()" type="button">Reset Grid</button>
+    </div>
+    <div id="container" class="container">
 
-  </div>
-
-    <div id="container" class="container"></div>
-      <script src="scripts.js"></script>
+      
+    </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
